public/stylesheets/style.css
/* ... */
@media only screen and (min-width: 1434) {
  .songsWrapper {

  }
}



.stop_music:hover, .start_game:hover, .next_music:hover, .start_music:hover, .repeat_music:hover {
  background: goldenrod;
}

.songVolText {
  font-weight: bold;
}

.songVolInput {
  vertical-align: middle;
  margin-right: 80px;
}

.pianoVolText {
  font-weight: bold;
}

.pianoVolInput {
  vertical-align: middle;
  display: inline-block;
}

.behavior_controls {
    margin-bottom: 2%;
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: flex-start;
    column-gap: 2%;
}

.piano_zone {
  margin: 0 auto;
  width: 92%;
  max-width: 860px;
  background: cadetblue;
  border: 11px solid black;
}

.content {
    display: flex;
    flex-direction: column;
}

.settings {
  bottom: 5px;
  margin-top: 2em;
  float: left;
}

.clearfix::after {
  content: "";
  clear: both;
  display: table;
}

.announcement {
  border-radius: 10px;
  opacity: 0.8;
  background: darkslateblue;
  padding: 6px;
  display: flex;
  margin-bottom: 8px;
  flex-wrap: wrap;
  justify-content: flex-end;
  align-content: center;
  flex-direction: column;
  align-items: center;
  user-select: none;
}

.announcement > h3 {
  color: floralwhite;
  font-size: 1.4em;
  font-family: monospace;
  margin: 0;
}

.settings.noBanner {
    margin-top: 5em;
    float: left;
    margin-bottom: 3em;
}

/* SLIDER SWITCH STYLES */

.switch {
   position: relative;
   display: inline-block;
   width: 60px;
   height: 34px;
 }

 .switch input { 
   opacity: 0;
   width: 0;
   height: 0;
 }

 .slider {
   position: absolute;
   cursor: pointer;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background-color: #ccc;
   -webkit-transition: .4s;
   transition: .4s;
 }

 .slider:before {
   position: absolute;
   content: "";
   height: 26px;
   width: 26px;
   left: 4px;
   bottom: 4px;
   background-color: white;
   -webkit-transition: .4s;
   transition: .4s;
 }

 input:checked + .slider {
   background-color: #2196F3;
 }

 input:focus + .slider {
   box-shadow: 0 0 1px #2196F3;
 }

 input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }

 /* Rounded sliders */
 .slider.round {
   border-radius: 34px;
 }

 .slider.round:before {
   border-radius: 50%;
 }


// CSS FOR MUSIC PLAYER 

@charset "UTF-8";
@import 'https://fonts.googleapis.com/css?family=Open+Sans';
* {
  outline: none;
  user-select: none;
}

body, html {
  margin: 0;
  background: #ddd;
}

body {
  font-family: "Open Sans", "Microsoft JhengHei", Arial, sans-serif;
}

.music-box {
//  position: absolute;
 // top: 50%;
//  left: 50%;
 // transform: translate(-50%, -50%);
  position: relative;
  padding: 4px 15px;
  width: 443px;
  height: initial;
  background-color: #463239;
  box-shadow: 0 0 15px #535353;
  border-radius: 3px;
  overflow: hidden;
}
.music-box .album {
  position: relative;
}
.music-box .album .photo {
  background: url("https://images.unsplash.com/photo-1533475184589-ad2b25374b56?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80") no-repeat 100% 100%;
  background-size: cover;
  width: 100%;
  height: 300px;
  display: none;
}
.music-box .album .infos {
  background-color: rgba(70, 50, 57, 0.3);
  width: 100%;
  height: 60px;
  position: relative;
  bottom: 0;
}
.music-box .album .infos .song_musicplayer {
  padding: 10px;
  color: #c6ad94;
  letter-spacing: 0.5px;
}
.music-box .album .infos .song_musicplayer span, .music-box .album .infos .song_musicplayer small {
  display: block;
}
.music-box .album .infos .song_musicplayer span {
	font-size: 1.2em;
	padding-top:10px;
}
.music-box .dashboard {
 // margin-top: 15px;
}
.music-box .dashboard .list {
  position: relative;
  transition-duration: 0.3s;
  background-color: #eee;
  right: 0;
}
.music-box .dashboard .list .list-btn {
  z-index: 2;
  background-color: #ffba49;
  width: 34px;
  height: 34px;
  position: absolute;
  right: 0px;
  top: -44px;
  cursor: pointer;
  transition-duration: 0.3s;
  transition-delay: 0.9s;
}
.music-box .dashboard .list .list-btn span {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: block;
  width: 28px;
  height: 1px;
  background-color: #463239;
  position: relative;
  transition: width 0.3s 0.3s, background-color 0.3s 0.6s;
  transition-timing-function: linear;
}
.music-box .dashboard .list .list-btn span::before, .music-box .dashboard .list .list-btn span::after {
  background-color: #463239;
  content: "";
  width: 28px;
  height: 1px;
  position: absolute;
  left: 0;
  top: 0;
  transition-timing-function: linear;
  transition: width 0.3s 0.3s, margin 0.3s 0.6s, transform 0.3s 0.3s;
}
.music-box .dashboard .list .list-btn span::before {
  margin-top: 6px;
}
.music-box .dashboard .list .list-btn span::after {
  margin-top: -6px;
}
.music-box .dashboard .list.active_musicplayer .list-btn {
  top: -62px;
  transition: top 0.3s 0.6s;
}
.music-box .dashboard .list.active_musicplayer .list-btn span {
  background-color: transparent;
  width: 34px;
  transition: width 0.3s, background-color 0.3s;
}
.music-box .dashboard .list.active_musicplayer .list-btn span::before, .music-box .dashboard .list.active_musicplayer .list-btn span::after {
  margin: 0;
  width: 34px;
  transition: width 0.3s, margin 0.3s, transform 0.3s 0.3s;
}
.music-box .dashboard .list.active_musicplayer .list-btn span::before {
  transform: rotate(225deg);
}
.music-box .dashboard .list.active_musicplayer .list-btn span::after {
  transform: rotate(315deg);
}
.music-box .dashboard .player .time {
  color: #c6ad94;
}
.music-box .dashboard .player .time-rail {
  height: 1px;
  position: relative;
  padding: 15px 0;
  overflow: hidden;
}
.music-box .dashboard .player .time-rail .thumb, .music-box .dashboard .player .time-rail .track {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
}
/* ... */

